<resources>
    <string name="app_name">Flex</string>
    <string name="title_activity_main">Flex</string>
    <string name="title_library">Library</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_settings">Settings</string>
    <string name="search_hint">What to search?</string>
    <string name="title_activity_search">SearchActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh_title">Refresh Title</string>
    <string name="search_title">Search Title</string>
    <string name="dot">•</string>
    <string name="movieDurationExample">1 hr 42 min</string>
    <string name="movieResolutionExample">1080p</string>
    <string name="movieSizeExample">10,21 GiB</string>
    <string name="movieNameExample">The Lord of the rings the battle for middle earth 2 So that is true shit kids
    </string>
    <string name="movieIdExample">movieId</string>
    <string name="moviePosterDescription">moviePoster</string>
    <string name="downloadDescription">downloadButton</string>
    <string name="folderSizeExample">183 items</string>
    <string name="folderNameExample">Folder example</string>
    <string name="folderIdExample">folderId</string>
    <string name="folderPosterDescription">folderPoster</string>
    <string name="folderDownloadDescrption">folderDownload</string>
    <string name="folderIconDescription">folderIcon</string>
    <string name="get_started_text">GET STARTED</string>
    <string name="stream_media_text">Stream your media for free on any device, with minimal effort</string>
    <string name="flex_media_text">Flex your media library</string>
    <string name="inapp_icon_description">inapp icon description</string>
    <string name="linux_icon_description">linux icon</string>
    <string name="setup_flex_text">Setup your flex server</string>
    <string name="download_flex_text">Download the flex server on your desktop from our website and follow the
        instructions
    </string>
    <string name="available_for_text">Available for Windows, Linux and MacOs</string>
    <string name="apple_icon_description">apple_icon</string>
    <string name="windows_icon_decription">windows_icon</string>
    <string name="visit_desktop_text">Visit on your desktop</string>
    <string name="flex_url">https://flex.github.io</string>
    <string name="back_button_description">back button</string>
    <string name="next_button_description">next_button</string>
    <string name="connect_to_your_flex_server">Connect to your flex server</string>
    <string name="enter_server_connection">Enter server connection details manually or scan a QR code</string>
    <string name="hostname">Hostname</string>
    <string name="port">Port</string>
    <string name="the_default_flex">The default flex server port is 51337</string>
    <string name="display_name_optional">Display name (optional)</string>
    <string name="how_your_server">How your server will be named inside the app</string>
    <string name="back">BACK</string>
    <string name="connect">CONNECT</string>
    <string name="ip_example">E.g. 192.168.88.284 or example.com</string>
    <string name="next">next</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
