<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.WelcomeFragment2">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:src="@drawable/linux_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/linux_icon"
                android:layout_marginTop="148dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/windows_icon"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/apple_icon"
                android:contentDescription="@string/linux_icon_description"/>
        <TextView
                android:text="@string/setup_flex_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" android:textStyle="bold"/>
        <TextView
                android:text="@string/download_flex_text"
                android:layout_width="330dp"
                android:maxWidth="330dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.488"/>
        <TextView
                android:text="@string/available_for_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/textView3"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/linux_icon"/>
        <ImageView
                android:src="@drawable/apple_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/apple_icon"
                android:layout_marginTop="148dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="88dp" app:layout_constraintStart_toEndOf="@+id/linux_icon"
                app:layout_constraintHorizontal_bias="0.5" android:contentDescription="@string/apple_icon_description"/>
        <ImageView
                android:src="@drawable/windows_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/windows_icon" android:layout_marginTop="148dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="84dp"
                app:layout_constraintEnd_toStartOf="@+id/linux_icon" android:contentDescription="@string/windows_icon_decription"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.566"
                android:id="@+id/textInputLayout2"
                android:maxWidth="300dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"        >

            <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/visit_desktop_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="1"/>
            <com.google.android.material.textfield.TextInputEditText
                    android:onClick="onShare"
                    android:drawableEnd="@drawable/share_icon"
                    android:focusable="false"
                    android:inputType="none"
                    android:paddingStart="15dp"
                    android:paddingEnd="12dp"
                    android:background="@drawable/flex_url_textbox"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:text="@string/flex_url" android:textAlignment="viewStart"/>
        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
                android:onClick="onBackBtnClicked"
                android:src="@drawable/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton2" android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:background="@drawable/transparent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                app:layout_constraintVertical_bias="0.8" android:contentDescription="@string/back_button_description"/>
        <ImageButton
                android:onClick="onNextBtnClicked"
                android:src="@drawable/next_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton3" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:background="@drawable/transparent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                app:layout_constraintVertical_bias="0.8" android:contentDescription="@string/next_button_description"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>