<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openVideoPlayer">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="181dp" tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:id="@+id/moviePoster"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:scaleType="center"
                app:layout_constraintHorizontal_bias="0.0"
                android:cropToPadding="false" android:adjustViewBounds="false"
                android:contentDescription="@string/moviePosterDescription"/>
        <TextView
                android:text="@string/movieDurationExample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movieDuration"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/movieName"
                app:layout_constraintVertical_bias="1.0"/>
        <TextView
                android:text="@string/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textDivider1"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movieDuration" android:layout_marginStart="4dp"/>
        <TextView
                android:text="@string/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textDivider"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movieResolution"
                android:layout_marginStart="4dp"/>
        <TextView
                android:text="@string/movieResolutionExample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movieResolution"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textDivider1"
                android:layout_marginStart="4dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/movieName"/>
        <TextView
                android:text="@string/movieSizeExample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movieSize"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textDivider"
                android:layout_marginStart="4dp" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/movieName"/>
        <ImageView
                android:onClick="onDownloadButtonClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/save_icon"
                android:id="@+id/movieDownload"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/moviePoster"
                app:layout_constraintStart_toEndOf="@+id/movieName" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.66" android:contentDescription="@string/downloadDescription"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/movieNameExample"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/movieName"
                android:maxLines="2" android:maxWidth="250dp" android:ellipsize="end"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintTop_toBottomOf="@+id/moviePoster" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                android:textSize="24sp"/>
        <TextView
                android:text="@string/movieIdExample"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:id="@+id/movieId" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:textSize="12sp" android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp" android:visibility="invisible"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>