<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.WelcomeFragment1">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatButton
                android:onClick="onGetStartedBtnClicked"
                android:stateListAnimator="@null"
                android:textColor="#1775CF"
                android:background="@drawable/get_started_btn"
                android:text="@string/get_started_text"
                android:layout_width="124dp"
                android:layout_height="40dp" android:id="@+id/get_started_btn"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/stream_media_text"
                app:layout_constraintVertical_bias="0.505"/>
        <TextView
                android:layout_width="333dp"
                android:layout_height="0dp"
                android:text="@string/stream_media_text"
                android:id="@+id/stream_media_text"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/flex_media_text"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/flex_media_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flex_media_text" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="24sp" android:layout_marginTop="92dp"
                app:layout_constraintTop_toBottomOf="@+id/flex_inapp_icon"
                app:layout_constraintHorizontal_bias="0.497"/>
        <ImageView android:src="@drawable/flex_inapp_icon"
                   android:layout_width="230dp"
                   android:layout_height="230dp"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   android:id="@+id/flex_inapp_icon" android:layout_marginTop="60dp"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintHorizontal_bias="0.497"
                   android:contentDescription="@string/inapp_icon_description" android:scaleType="fitXY"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>